[package]
name = "nidaqmx-sys"
version = "0.1.0"
edition = "2021"
links = "nidaqmx"
build = "build.rs"

[lib]
name = "nidaqmx_sys"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true             # Is documented by default.
plugin = false         # Used as a compiler plugin (deprecated).
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
edition = "2021"       # The edition of the target.
crate-type = ["cdylib"]   # The crate types to generate.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"

[build-dependencies]
bindgen = "0.60.1"
cty = "0.2.2"