[package]
name = "openlate-sys"
version = "0.1.0"
edition = "2021"
links = "nidaqmx"
build = "build.rs"

# [lib]
# crate-type = ["cdylib"]   # The crate types to generate.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"

[build-dependencies]
bindgen = "0.60.1"
cty = "0.2.2"