[package]
name = "nidaqmx"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nidaqmx-sys = { path = "../nidaqmx-sys"}
bumpalo = "3.11.0"
regex = "1"
bitflags = "1.3.2"
once_cell = "1.15.0"
num_enum = "0.5.7"
strum = { version = "0.24", features = ["derive"] }
enum-as-inner = "0.5.1"
enum_dispatch = "0.3.8"
tinyvec = "1.6.0"
cty = "0.2.2"
heapless = "0.7.16"
thiserror = "1.0.35"
anyhow = "1.0.65"
lazy_static = "1.4.0"